<resources>
    <string name="app_name">Shoppy.</string>
    <string name="title_home">Home</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_visual_search">Visual Search</string>
    <string name="title_visual_search_Results">Visual Search Result</string>
    <string name="title_profile">Profile</string>
    <string name="title_bag">Bag</string>
    <string name="title_categories">All Categories</string>
    <string name="title_user_profile">My Profile</string>
    <string name="title_FAQ">FAQ</string>
    <string name="title_user_orders">My Orders</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_reset_password">Reset Password</string>
    <string name="title_edit_address">Edit Address</string>
    <string name="title_user_addresses">My Addresses</string>
    <string name="title_edit_payment_methods">Edit Payment Methods</string>
    <string name="title_payment_methods">Payment Methods</string>
    <string name="title_products">Products</string>
    <string name="title_product_details">Product Details</string>
    <string name="title_fragment_order_details">Order Details</string>
    <string name="title_fragment_order_confirmation">Order Confirmation</string>
    <string name="title_fragment_search">Search</string>


    <string-array name="category_options">
        <!-- Gender-specific fashion -->
        <item>Women\'s Fashion (Dresses, Shoes, Bags, Jewelry)</item>
        <item>Men\'s Fashion (Shirts, Shoes, Watches)</item>

        <!-- Unisex categories -->
        <item>Beauty &amp; Skincare</item>
        <item>Fragrances</item>
        <item>Groceries &amp; Kitchen</item>
        <item>Home &amp; Furniture</item>
        <item>Sunglasses</item>
        <item>Vehicles (Cars &amp; Motorcycles)</item>
        <item>Lighting &amp; Decoration</item>
        <item>Electronics (Laptops, Smartphones, Tablets)</item>
        <item>Sports &amp; Outdoor Accessories</item>
    </string-array>


    <string-array name="Countries">
        <item>Not Selected</item>
        <item>Albania</item>
        <item>Argentina</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Belgium</item>
        <item>Brazil</item>
        <item>Bulgaria</item>
        <item>Canada</item>
        <item>Chile</item>
        <item>China</item>
        <item>Colombia</item>
        <item>Costa Rica</item>
        <item>Croatia</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Denmark</item>
        <item>Dominican Republic</item>
        <item>Ecuador</item>
        <item>El Salvador</item>
        <item>Estonia</item>
        <item>Finland</item>
        <item>France</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Greece</item>
        <item>Guatemala</item>
        <item>Honduras</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kosovo</item>
        <item>Kyrgyzstan</item>
        <item>Latvia</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Malawi</item>
        <item>Malta</item>
        <item>Mexico</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Morocco</item>
        <item>Netherlands</item>
        <item>New Zealand</item>
        <item>North Macedonia</item>
        <item>Norway</item>
        <item>Panama</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>San Marino</item>
        <item>Serbia</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>South Africa</item>
        <item>South Korea</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vatican City</item>
        <item>Vietnam</item>
        <item>Zambia</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>


</resources>