<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/user_profile"
        android:title="@string/title_profile" />

    <item
        android:id="@+id/navigation_visual_search"
        android:icon="@drawable/ic_scan"
        android:title="@string/title_visual_search" />

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home_logo"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_favorites"
        android:icon="@drawable/favorites_logo"
        android:title="@string/title_favorites" />

    <item
        android:id="@+id/navigation_bag"
        android:icon="@drawable/bag_logo"
        android:title="@string/title_bag" />

</menu>